--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="slideshow-container">
         <!-- Контейнеры для отображения картинок и текста -->
         <div class="mySlides fade">
-            <img src="img1.png" style="width:100%">
+            <img src="img1.PNG" style="width:100%">
             <div class="text">Добро пожаловать в новую социальную сеть!</div>
         </div>
         <div class="mySlides fade">
