--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
             <div class="text">Добро пожаловать в новую социальную сеть!</div>
         </div>
         <div class="mySlides fade">
-            <img src="img2.png" style="width:100%">
+            <img src="Social/img2.PNG" style="width:100%">
             <div class="text">Все мы стремимся к самовыражению, поэтому в социальной сети вы сможете загружать свои
                 картинки в профиль</div>
         </div>
         <div class="mySlides fade">
-            <img src="img3.png" style="width:100%">
+            <img src="Social/img3.PNG" style="width:100%">
             <div class="text">Какая же социальная сеть без общения? Здесь вы сможете общаться абсолютно с каждым</div>
         </div>
         <div class="mySlides fade">
-            <img src="img4.png" style="width:100%">
+            <img src="Social/img4.PNG" style="width:100%">
             <div class="text">Одной из особенностей этой социальной сети является наличие встроенного магазина</div>
         </div>
         <div class="mySlides fade">
-            <img src="img5.png" style="width:100%">
+            <img src="Social/img5.PNG" style="width:100%">
             <div class="text">Если вы устали на работе и захотите расслабиться и развлечься, то в социальной сети
                 предусмотрено несколько классических игр</div>
         </div>
         <div class="mySlides fade">
-            <img src="img6.png" style="width:100%">
+            <img src="Social/img6.PNG" style="width:100%">
             <div class="text">Так же Вы сможете делиться своими новостями, а также публиковать различные посты со своими
                 наблюдениями</div>
         </div>
